--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -4,11 +4,11 @@
 
 .HomePageImg {
   background-image: url("../../images/DoghouseImage.jpg");
-  background-size: center;
+  background-size: auto;
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  min-height: calc(100vh - 48px);
   padding-bottom: 80px;
   position: relative;
 }
@@ -30,6 +30,7 @@
 
 #welcome-h1 {
   color: #285a84;
+  font-size: 4vw;
 }
 
 .card-container {
